# IndieStudio

./: CMakeLists.txt  README.md
assets/: bomberman.pk3
assets/models/Snake/: OLDILDE.MD3  Snake_run.MD3  Snake_sneaky.MD3
include/Game/: AutoPlayer.hpp  Bomb.hpp  Bomberman.hpp  Bonus.hpp  BonusBombUp.hpp  Fire.hpp  Floor.hpp  Game.hpp  IAutoPlayer.hpp  IBomb.hpp  IBomberman.hpp  IBonus.hpp  IFire.hpp  IFloor.hpp  IGame.hpp  IMap.hpp  IObject.hpp  IWall.hpp  Map.hpp  Wall.hpp  indie.hpp
include/Graphics/: Assets2DHandler.hpp  Assets3DHandler.hpp  Button.hpp  Graphics.hpp  GraphicsGame.hpp  GraphicsMenu.hpp  HandleInput.hpp  Launcher.hpp  PlayerSelect.hpp  Settings.hpp  SoundMachine.hpp
src/: AutoPlayer.cpp  Bomb.cpp  Bomberman.cpp  Bonus.cpp  Fire.cpp  Floor.cpp  Game.cpp  Map.cpp  Wall.cpp  main.cpp
src/Graphics/: Assets2DHandler.cpp  Assets3DHandler.cpp  Button.cpp  Graphics.cpp  GraphicsGame.cpp  GraphicsMenu.cpp  HandleInput.cpp  Launcher.cpp  PlayerSelect.cpp  Settings.cpp  SoundMachine.cpp
